# latex_weekly

./: .gitignore  CMakeLists.txt  README.md  lec_01.tex
basics/: chapter_01.tex  chapter_02.tex  math.bib  txfonts_example.tex
tikz/: lec_01.tex  lec_03.tex
